Comments addressed, LimiterUtils logic moved to TaskLimits class