@@ -22,52 +22,138 @@ package org.apache.druid.indexing.overlord.setup;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import org.apache.druid.common.config.Configs;
+import org.apache.druid.error.InvalidInput;
+import org.apache.druid.indexing.common.task.Task;
 
 import javax.annotation.Nullable;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
+/**
+ * Defines global limits for task execution using absolute slot counts and proportional ratios.
+ *
+ * <p>Task count limits ({@code maxSlotCountByType}) define the maximum number of slots per task type.
+ * Task ratios ({@code maxSlotRatioByType}) define the proportion of total slots a task type can use.
+ * If both are set for a task type, the lower limit applies.</p>
+ *
+ * <p>Example:
+ * {@code maxSlotCountByType = {"index_parallel": 3, "query_controller": 5}}
+ * {@code maxSlotRatioByType = {"index_parallel": 0.5, "query_controller": 0.25}}</p>
+ */
 public class TaskLimits
 {
-  private final Map<String, Integer> taskLimits;
-  private final Map<String, Double> taskRatios;
+  public static final TaskLimits EMPTY = new TaskLimits();
+  private final Map<String, Integer> maxSlotCountByType;
+  private final Map<String, Double> maxSlotRatioByType;
 
-  public TaskLimits()
+  private TaskLimits()
   {
-    this(Collections.emptyMap(), Collections.emptyMap());
+    this(Map.of(), Map.of());
   }
 
   @JsonCreator
   public TaskLimits(
-      @JsonProperty("taskLimits") @Nullable Map<String, Integer> taskLimits,
-      @JsonProperty("taskRatios") @Nullable Map<String, Double> taskRatios
+      @JsonProperty("maxSlotCountByType") @Nullable Map<String, Integer> maxSlotCountByType,
+      @JsonProperty("maxSlotRatioByType") @Nullable Map<String, Double> maxSlotRatioByType
   )
   {
-    validateLimits(taskLimits, taskRatios);
-    this.taskLimits = Configs.valueOrDefault(taskLimits, Collections.emptyMap());
-    this.taskRatios = Configs.valueOrDefault(taskRatios, Collections.emptyMap());
+    validateLimits(maxSlotCountByType, maxSlotRatioByType);
+    this.maxSlotCountByType = Configs.valueOrDefault(maxSlotCountByType, Collections.emptyMap());
+    this.maxSlotRatioByType = Configs.valueOrDefault(maxSlotRatioByType, Collections.emptyMap());
   }
 
-  private void validateLimits(Map<String, Integer> taskLimits, Map<String, Double> taskRatios)
+  /**
+   * Determines whether the given task can be executed based on task limits and available capacity.
+   *
+   * @param task The task to check.
+   * @param currentSlotsUsed The current capacity used by tasks of the same type.
+   * @param totalCapacity The total available capacity across all workers.
+   * @return {@code true} if the task meets the defined limits and capacity constraints; {@code false} otherwise.
+   */
+  public boolean canRunTask(Task task, Integer currentSlotsUsed, Integer totalCapacity)
   {
-    if (taskLimits != null && taskLimits.values().stream().anyMatch(val -> val < 0)) {
-      throw new IllegalArgumentException("Task limits should be bigger than 0");
+    if (maxSlotRatioByType.isEmpty() && maxSlotCountByType.isEmpty()){
+      return true;
+    }
+    return meetsTaskLimit(
+        task,
+        currentSlotsUsed,
+        totalCapacity
+    );
+  }
+
+  private boolean meetsTaskLimit(
+      Task task,
+      Integer currentSlotsUsed,
+      Integer totalCapacity
+  )
+  {
+    final Integer limit = getLimitForTask(task.getType(), totalCapacity);
+
+    if (limit == null) {
+      return true; // No limit specified, so task can run
+    }
+
+    int requiredCapacity = task.getTaskResource().getRequiredCapacity();
+
+    return hasCapacityBasedOnLimit(limit, currentSlotsUsed, requiredCapacity);
+  }
+
+  private Integer getLimitForTask(
+      String taskType,
+      Integer totalCapacity
+  )
+  {
+    Integer absoluteLimit = maxSlotCountByType.get(taskType);
+    Double ratioLimit = maxSlotRatioByType.get(taskType);
+
+    if (absoluteLimit == null && ratioLimit == null) {
+      return null;
+    }
+
+    if (ratioLimit != null) {
+      int ratioBasedLimit = calculateTaskCapacityFromRatio(ratioLimit, totalCapacity);
+      if (absoluteLimit != null) {
+        return Math.min(absoluteLimit, ratioBasedLimit);
+      } else {
+        return ratioBasedLimit;
+      }
+    } else {
+      return absoluteLimit;
+    }
+  }
+
+  private boolean hasCapacityBasedOnLimit(int limit, int currentCapacityUsed, int requiredCapacity)
+  {
+    return limit - currentCapacityUsed >= requiredCapacity;
+  }
+
+  private int calculateTaskCapacityFromRatio(double taskSlotRatio, int totalCapacity)
+  {
+    int workerParallelIndexCapacity = (int) Math.floor(taskSlotRatio * totalCapacity);
+    return Math.max(1, Math.min(workerParallelIndexCapacity, totalCapacity));
+  }
+
+  private void validateLimits(Map<String, Integer> taskCountLimits, Map<String, Double> taskRatios)
+  {
+    if (taskCountLimits != null && taskCountLimits.values().stream().anyMatch(val -> val < 0)) {
+      throw InvalidInput.exception("Max task slot count limit for any type must be greater than zero. Found[%s].", taskCountLimits);
     } else if (taskRatios != null && taskRatios.values().stream().anyMatch(val -> val < 0 || val > 1)) {
-      throw new IllegalArgumentException("Task ratios should be in the interval of [0, 1]");
+      throw InvalidInput.exception("Max task slot ratios should be in the interval of [0, 1]. Found[%s].", taskCountLimits);
     }
   }
 
   @JsonProperty
-  public Map<String, Integer> getTaskLimits()
+  public Map<String, Integer> getMaxSlotCountByType()
   {
-    return taskLimits;
+    return maxSlotCountByType;
   }
 
   @JsonProperty
-  public Map<String, Double> getTaskRatios()
+  public Map<String, Double> getMaxSlotRatioByType()
   {
-    return taskRatios;
+    return maxSlotRatioByType;
   }
 
   @Override
@@ -80,23 +166,21 @@ public class TaskLimits
       return false;
     }
     TaskLimits that = (TaskLimits) o;
-    return Objects.equals(taskLimits, that.taskLimits) && Objects.equals(taskRatios, that.taskRatios);
+    return Objects.equals(maxSlotCountByType, that.maxSlotCountByType) && Objects.equals(maxSlotRatioByType, that.maxSlotRatioByType);
   }
 
   @Override
   public int hashCode()
   {
-    int result = taskLimits != null ? taskLimits.hashCode() : 0;
-    result = 31 * result + (taskRatios != null ? taskRatios.hashCode() : 0);
-    return result;
+    return Objects.hash(maxSlotCountByType, maxSlotRatioByType);
   }
 
   @Override
   public String toString()
   {
     return "TaskLimits{" +
-           "taskLimits=" + taskLimits +
-           ", taskRatios=" + taskRatios +
+           "maxSlotCountByType=" + maxSlotCountByType +
+           ", maxSlotRatioByType=" + maxSlotRatioByType +
            '}';
   }
 }
